--- a/estilos/style.css
+++ b/estilos/style.css
@@ -36,10 +36,29 @@ section#telefone {
     background: url(../imagens/frame-iphone.png)no-repeat; /*pag. 25 caderno*/
 }
 
-iframe#tela {
+iframe#tela { /*enquandrar o iframe na ela do celular*/
     position: relative;
     top: 80px;
     left: 22px;
     width: 269px;
     height: 471px;
+}
+
+section#redes-sociais {
+    text-align: right;
+}
+
+section#redes-sociais > a > img {
+    width: 60px;
+    margin: 10px;
+    border-radius: 50%; /* 50% transforma em redondo*/
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.356);
+    box-sizing: border-box; /*a borda tem o tamanho da caixa, não fica para fora*/
+}
+
+section#redes-sociais > a > img:hover {
+    border: 2px solid white;
+    transform: translate(-3px, -3px);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.459);
+    transition: transform .3s, border 1s;
 }
